<resources>


    <string name="app_name">Journey Plan</string>
    <string name="activity_station">Station</string>
    <string name="activity_networks_list">Networks List</string>
    <string name="activity_map">Map</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_journey_forecast">Journey Forecast</string>
    <string name="activity_stations_list">Journey Plan</string>
    <string name="connection_error">Connection error</string>
    <string name="json_error">Error retrieving data</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="welcome_dialog_message">Please select a bicycle network from the list.</string>
    <string name="welcome_dialog_ok">OK</string>
    <string name="welcome_dialog_cancel">Cancel</string>
    <string name="welcome_dialog_title">Welcome</string>
    <string name="zero">0</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>
    <string name="navigate">Navigate</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="predict">Predict</string>
    <string name="notFound">Not found</string>
    <string name="free_bikes">Free bikes:\u00A0</string>
    <string name="empty_slots">Empty slots:\u00A0</string>
    <string name="all_stations">Stations</string>
    <string name="no_stations">No stations</string>
    <string name="title_bike_networks_list">Select network</string>

</resources>
