<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myCoordinatorLayoutStation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.koszacharis.bss.app.activities.StationActivity">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/stationMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.40"
            tools:context="com.example.koszacharis.bikesharingsystem.StationActivity"

            />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/stationName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:gravity="center"
                    android:text="Station name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/stationAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/stationName"
                    android:text="Address"
                    android:textColor="#000000"
                    android:visibility="gone" />

                <GridLayout
                    android:id="@+id/rightLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_below="@id/stationAddress"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/stationFreeBikesLogo"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_column="0"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="0dp"

                        android:layout_row="1"
                        android:contentDescription="@string/free_bikes"
                        android:src="@drawable/ic_directions_bike_black_48dp" />

                    <TextView

                        android:id="@+id/stationFreeBikes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_row="1"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/stationEmptySlotsLogo"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_column="0"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="0dp"

                        android:layout_row="2"
                        android:contentDescription="@string/empty_slots"
                        android:src="@drawable/ic_local_parking_black_48dp" />

                    <TextView
                        android:id="@+id/stationEmptySlots"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_row="2"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/distance"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_column="1"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_row="1"
                        android:contentDescription="@string/distance"
                        android:src="@drawable/ic_distance" />

                    <TextView
                        android:id="@+id/tvDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_row="1"
                        android:text="0 km"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <ImageView

                        android:id="@+id/duration"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_column="1"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="0dp"
                        android:layout_row="2"
                        android:contentDescription="@string/duration"
                        android:padding="5dp"
                        android:src="@drawable/ic_clock" />

                    <TextView
                        android:id="@+id/tvDuration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_row="2"
                        android:text="0 min"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#000000"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </GridLayout>

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>